--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "init": "^0.1.2",
-    "nodemon": "^3.0.1"
+    "mysql2": "^3.5.2",
+    "nodemon": "^3.0.1",
+    "sequelize": "^6.32.1"
   }
 }
