--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.5.2",
     "nodemon": "^3.0.1",
+    "razorpay": "^2.9.1",
     "sequelize": "^6.32.1"
   }
 }
