--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mysql2": "^3.5.2",
     "nodemon": "^3.0.1",
     "razorpay": "^2.9.1",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "sib-api-v3-sdk": "^8.5.0"
   }
 }
