--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "nodemon": "^3.0.1",
     "razorpay": "^2.9.1",
     "sequelize": "^6.32.1",
-    "sib-api-v3-sdk": "^8.5.0"
+    "sib-api-v3-sdk": "^8.5.0",
+    "uuid": "^9.0.0"
   }
 }
