--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "init": "^0.1.2",
     "jsonwebtoken": "^9.0.1",
     "moment": "^2.29.4",
+    "morgan": "^1.10.0",
     "mysql2": "^3.5.2",
     "nodemon": "^3.0.1",
     "razorpay": "^2.9.1",
